# MediPredict

./: Dockerfile.txt  requirments.txt
MediPredict/: app.py  database.db  pyproject.toml  requirements.txt
MediPredict/model/: train_model.ipynb
MediPredict/static/: style.css
MediPredict/templates/: base.html  dashboard.html  history.html  index.html  login.html  signup.html
